fix main nav width, some minor layout fixes and solve the overflow bug on mobile devices

--- a/themes/base/static/scss/layout/_main-nav.scss
+++ b/themes/base/static/scss/layout/_main-nav.scss
@@ -21,7 +21,7 @@
 }
 .main-nav-opened { // when the offcanvas menu is opened
     .main-nav {
-        width: 300px;
+        width: 250px;
     }
 }
 
@@ -31,7 +31,10 @@
     margin: 105px 10px 10px; 
     text-align: center;
     li {
-        margin-bottom: 20px;
+        margin-bottom: 15px;
+        @media screen and (min-height: 768px) {
+            margin-bottom: 20px;
+        }
         &:last-child {
             margin-bottom: 0 !important;
         }
@@ -43,6 +46,9 @@
         text-align: left; 
         ul {
             margin-top: 10px;
+            li {
+                margin-bottom: 10px;
+            }
         }
     }
     a {
